<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.axonvibe.challenge.mobile.main.view.SuccessAuthActivity">

    <TextView
        android:id="@+id/tv_player_name_success_auth_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/success_auth_screen_welcome_tv"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar_success_auth_screen" />

    <ImageView
        android:id="@+id/img_avatar_success_auth_screen"
        android:layout_width="@dimen/dp_220"
        android:layout_height="@dimen/dp_220"
        android:layout_marginTop="@dimen/dp_120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_logout_success_auth_screen"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/success_auth_screen_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_scan_success_auth_screen" />

    <Button
        android:id="@+id/btn_scan_success_auth_screen"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        android:textAllCaps="false"
        android:text="@string/success_auth_screen_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_name_success_auth_screen" />

    <ProgressBar
        android:id="@+id/pb_loading_image_success_auth_screen"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_scan_success_auth_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>